Added PDF, README, and updated notebook

--- a/exoplanet_detection.ipynb
+++ b/exoplanet_detection.ipynb
@@ -25,6 +25,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "En primer lugar, importamos las librerías a utilizar:"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -38,6 +45,13 @@
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "A continuación, cargamos los datos. En este caso, el fichero que contiene los datos de Kepler se llama \"cumulative.csv\"."
       ]
     },
     {
@@ -58,6 +72,13 @@
       },
       "source": [
         "### **Análisis exploratorio**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Realizamos un análisis exploratorio de nuestros datos para comprobar exactamente con qué tipo de información estamos trabajando."
       ]
     },
     {
@@ -981,6 +1002,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Empezamos trabajando con los valores nulos o missing values."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1632,7 +1660,7 @@
         "id": "A9F1k3o4-gb5"
       },
       "source": [
-        "Como hay pocos valores nulos y las variables no se centran en los extremos, podemos rellenar los valores faltantes con la media."
+        "Como hay pocos valores nulos y las variables no se centran en los extremos (no tenemos una forma de 'U' en las gráficas), podemos rellenar los valores faltantes con la media."
       ]
     },
     {
@@ -4294,6 +4322,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Las correlaciones no son exageradamente altas, por lo que en principio no sería necesario eliminar variables. Sin embargo, la variable 'koi_time0bk', que representa la fecha en la que se tomaron los datos, lógicamente no debería influir en determinar si uno de los candidatos es o no exoplaneta."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4341,6 +4376,13 @@
       },
       "source": [
         "### **Dataframe Final**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Nos quedamos entonces con el siguiente dataframe como nuestro conjunto definitivo de datos."
       ]
     },
     {
@@ -4967,6 +5009,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Continuamos con la tarea de clasificar los candidatos. El primer paso será importar aquellas librerías necesarias para crear y entrenar los modelos."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4995,7 +5044,7 @@
         "id": "5HAZonUWkXQb"
       },
       "source": [
-        "El objetivo de la clasificación es crear un modelo capaz de diferenciar aquellos individuos clasificados como CONFIRMED de los clasificados como FALSE POSITIVE conociendo únicamente algunas características físicas, de su estrella, de la observación de su tránsito y de su posición."
+        "El objetivo de la clasificación es crear un modelo capaz de diferenciar aquellos individuos clasificados como CONFIRMED de los clasificados como FALSE POSITIVE, conociendo únicamente algunas características físicas, de su estrella, de la observación de su tránsito y de su posición."
       ]
     },
     {
@@ -5032,7 +5081,7 @@
         "id": "mEiw7OStkiFT"
       },
       "source": [
-        "Eliminamos los individuos clasificados como CANDIDATES. Nos encontramos con un desbalanceo importante entre las clases CONFIRMED y FALSE POSITIVE."
+        "Eliminamos los individuos clasificados como CANDIDATES. Nos encontramos con un desbalanceo considerable entre las clases CONFIRMED y FALSE POSITIVE."
       ]
     },
     {
@@ -5963,7 +6012,7 @@
         "id": "WLtRJLMUREPm"
       },
       "source": [
-        "El siguiente código muestra la matriz de confusión y las diferentes tasas de acierto de cada modelo. **Los resultados variarán cada vez que se reentrene el modelo.**"
+        "El siguiente código muestra la matriz de confusión y las diferentes tasas de acierto de cada modelo. **Los resultados variarán cada vez que se reentrene el modelo.** La forma de evitar esto es creando una semilla o 'seed', de manera que garanticemos la replicabilidad de los datos."
       ]
     },
     {
@@ -6079,7 +6128,7 @@
         "id": "xPxopLfqNCmF"
       },
       "source": [
-        "Podemos poner a prueba el modelo más eficiente de los resultantes (el Random Forest) intentando predecir qué individuos de la clase CANDIDATE eliminada al principio de la sección son exoplanetas."
+        "Tras entrenar varios modelos, concluimos que el Random Forest es el que mejores resultados da. Podemos ponerlo a prueba intentando predecir qué individuos de la clase CANDIDATE eliminada al principio de la sección son exoplanetas."
       ]
     },
     {
@@ -6140,6 +6189,13 @@
       },
       "source": [
         "## **Agrupamiento**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Para terminar, realizaremos un agrupamiento de los datos utilizando técnicas de clustering. Como en los casos anteriores, el primer paso es importar las librerías necesarias."
       ]
     },
     {
@@ -6217,7 +6273,7 @@
         "id": "Q_2z8QCIQWU1"
       },
       "source": [
-        "Con el método del codo elegimos el número óptimo de clusters para nuestro modelo, 4 en este caso."
+        "Con el método del codo elegimos el número óptimo de clusters para nuestro modelo, 4 o 5 en este caso. Por escoger uno de los dos, nos quedamos con el 4."
       ]
     },
     {
@@ -6266,7 +6322,7 @@
         "id": "v7nXUmCP5qiq"
       },
       "source": [
-        "Graficamos distintas variables para encontrar patrones o clústers claro. **Cada vez que se vuelve a correr esta celda, cambia el orden de los clústers**."
+        "Graficamos distintas variables para encontrar patrones o clústers claros. **Cada vez que se vuelve a correr esta celda, cambia el orden de los clústers**, es decir, la agrupación que ahora aparece como 1, luego puede aparecer como 3. Sin embargo, el contenido de los clústers no cambia."
       ]
     },
     {
@@ -6517,7 +6573,7 @@
         "id": "1eYTyQyC2Wpx"
       },
       "source": [
-        "Como el patrón que ha seguido el agrupamiento está relacionado con la temperatura efectiva, vamos a comprobar que información podemos obtener de ella. Creamos una nueva variable que refleje el tipo espectral de la estrella."
+        "Como el patrón que ha seguido el agrupamiento está relacionado con la temperatura efectiva (la última gráfica es el más claro ejemplo de ello), vamos a comprobar que información podemos obtener de ella. Creamos una nueva variable que refleje el tipo espectral de la estrella, que viene definido por intervalos de temperatura efectiva."
       ]
     },
     {
@@ -6584,6 +6640,13 @@
       "source": [
         "df_final['Tipo_S'] = spectral_class\n",
         "df_final['Tipo_S'].value_counts()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Encontramos que los clústers están bien relacionados con el tipo espectral de las estrellas que orbitan los candidatos."
       ]
     },
     {
